# pogocache

./: .dockerignore  .gitignore  BUILD_SYSTEM_SUMMARY.md  CMakeLists.txt  Dockerfile  Dockerfile.optimized  MIGRATION_GUIDE.md  Makefile  Makefile.improved  PHASE1_VALIDATION_REPORT.md  PUBLISHING_STRATEGY.md  README.md  REPOSITORY_STRATEGY.md  STRUCTURE.md  build-architecture.md  docker-compose.yml
config/: build.conf  cmake.conf  runtime.conf
docs/: BUILD_SYSTEM.md  PERFORMANCE_TUNING.md  docker-optimization.md
examples/: Makefile  advanced_features.c  basic_usage.c
memory/agents/: README.md
memory/sessions/: README.md
scripts/: build.sh  docker-build.sh  install.sh  test.sh
src/: Makefile  conn.h  main.c  parse.h  performance_tuning.c  performance_tuning.h  tls.h  util.h
tools/: build-benchmark.sh
